package com.phucnguyen.agriai.module.diagnose.entity;
import com.phucnguyen.agriai.module.crop.entity.CropType;

import com.phucnguyen.agriai.shared.entity.BaseEntity;
import com.phucnguyen.agriai.module.diagnose.enums.SeverityLevel;
import jakarta.persistence.*;
import lombok.*;
import lombok.experimental.SuperBuilder;
import org.hibernate.envers.Audited;
import org.hibernate.envers.RelationTargetAuditMode;

@Entity
@Table(name = "Disease")
@Audited
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@SuperBuilder
public class Disease extends BaseEntity {
    @Audited(targetAuditMode = RelationTargetAuditMode.NOT_AUDITED)
    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "croptypeId")
    private CropType cropType;

    @Column(name = "diseaseName", length = 50)
    private String diseaseName;

    @Column(name = "diseasenameEn", length = 50)
    private String diseaseNameEn;

    @Column(name = "diseaseCode", length = 50)
    private String diseaseCode;

    @Column(name = "description", columnDefinition = "TEXT")
    private String description;

    @Column(name = "symptoms", columnDefinition = "TEXT")
    private String symptoms;

    @Enumerated(EnumType.STRING)
    @Column(name = "severityLevel")
    private SeverityLevel severityLevel;
}
