// ==========================================
// ERD VIEW: DIAGNOSIS FLOW
// Use this view to avoid crowded lines in the full 21-table schema.
// ==========================================

Table users {
  id integer [primary key]
  email varchar [unique]
  full_name varchar
}

Table crop_type {
  id integer [primary key]
  crop_name varchar
  is_active boolean
}

Table area_infor {
  id integer [primary key]
  user_id integer
  province varchar
  latitude float
  longitude float
}

Table disease {
  id integer [primary key]
  croptype_id integer
  disease_code varchar
  disease_name varchar
  severity_level varchar
}

Table diagnose_history {
  id integer [primary key]
  user_id integer
  areainfo_id integer
  croptype_id integer
  status varchar
  originalimageurl varchar
  weather_data text
  latitude float
  longitude float
  created_at timestamp
}

Table diagnose_history_detail {
  id integer [primary key]
  diagnosehistory_id integer
  disease_id integer
  confidence_score numeric
  severity_level varchar
  risk_warning varchar
  treatment_data text
  cultivation_data text
}

Table diagnose_review {
  id integer [primary key]
  history_id integer [unique, not null]
  user_id integer
  rating integer
  feedback text
  is_accurate boolean
  reviewed_at timestamp
}

Table diagnose_treatment_recommendation {
  id integer [primary key]
  diagnose_history_detail_id integer [not null]
  treatment_plan_id integer [not null]
  rank_score integer
}

Table treatment_plan {
  id integer [primary key]
  disease_id integer
  drug_id integer
  treatment_name varchar
}

Table disease_weather_condition {
  id integer [primary key]
  disease_id integer [not null]
  condition_group varchar
  weather_factor varchar
  operator varchar
  min_value numeric
  max_value numeric
}

Ref: area_infor.user_id > users.id
Ref: disease.croptype_id > crop_type.id
Ref: diagnose_history.user_id > users.id
Ref: diagnose_history.areainfo_id > area_infor.id
Ref: diagnose_history.croptype_id > crop_type.id
Ref: diagnose_history_detail.diagnosehistory_id > diagnose_history.id
Ref: diagnose_history_detail.disease_id > disease.id
Ref: diagnose_review.history_id > diagnose_history.id
Ref: diagnose_review.user_id > users.id
Ref: diagnose_treatment_recommendation.diagnose_history_detail_id > diagnose_history_detail.id
Ref: treatment_plan.disease_id > disease.id
Ref: disease_weather_condition.disease_id > disease.id
